feat: add UTBK condition

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,11 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 TINYMCE_API_KEY=
+
+PROD_ADMIN_USERNAME=
+PROD_ADMIN_EMAIL=
+PROD_ADMIN_PASSWORD=
+
+PROD_USER_USERNAME=
+PROD_USER_EMAIL=
+PROD_USER_PASSWORD=
